--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="nav_header_subtitle">Experience files differently</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_search">Search</string>
+    <string name="button_open">Open</string>
 </resources>
