--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,21 @@
 <resources>
-    <!-- TODO Add classification for the strings -->
-    <string name="home">Home</string>
+    <!-- General strings -->
     <string name="app_name">Aurora</string>
+
+    <!-- Menu strings -->
+    <string name="home">Home</string>
     <string name="about_us">About Us</string>
     <string name="settings">Settings</string>
     <string name="help_feedback">Help &amp; Feedback</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="action_search">Search</string>
+
+    <!-- Navigation Drawer strings-->
     <string name="nav_header_title">Aurora</string>
     <string name="nav_header_subtitle">Experience files differently</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_search">Search</string>
+
+    <!-- Recycler View strings -->
     <string name="button_open">Open</string>
 </resources>
