--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="settings">Settings</string>
     <string name="help_feedback">Help &amp; Feedback</string>
     <string name="action_search">Search</string>
+    <string name="search_prompt">Search for a file...</string>
 
     <!-- Navigation Drawer strings-->
     <string name="nav_header_title">Aurora</string>
