--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,10 @@
     <!-- Card File strings -->
     <string name="file_details">Details about file</string>
 
+    <!-- Feedback activity -->
+    <string name="feedback_send">Send</string>
+    <string name="feedback_edittext_hint">Enter your feedback here</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
