--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,10 @@
     <string name="button_open">Open</string>
 
     <!-- Card File strings -->
-    <string name="file_details">Details about file</string>
+    <string name="file_description">\'Description of the file\'</string>
+    <string name="file_last">Last opened on:</string>
+    <string name="file_added_on">Added on:</string>
+    <string name="file_more_details">Click for more info...</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
