--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,14 @@
 
     <!-- Card File strings -->
     <string name="file_details">Details about file</string>
+    <string name="null_file">The selected file was null</string>
+    <string name="file_not_found">The file could not be found</string>
+
+    <!-- Feedback Activity -->
+    <string name="feedback_sent">Feedback sent, thank you!</string>
+    <string name="feedback_wrong">Something went wrong. Please try again.</string>
+    <string name="feedback_empty">Please enter your feedback first.</string>
+    <string name="enter_feedback">Enter your feedback here</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
