--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="select_plugin">Select a plugin</string>
     <string name="no_plugins_available">No plugins available</string>
+
+    <!-- Service Permission -->
+    <string name="service_permission_label">Aurora Services</string>
+    <string name="service_permission_description">Allows the app to make use of Aurora services</string>
 </resources>
