--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="about_us">About Us</string>
     <string name="settings">Settings</string>
     <string name="help_feedback">Help &amp; Feedback</string>
+    <string name="plugin_market">Plugin Market</string>
     <string name="action_search">Search</string>
     <string name="search_prompt">Search for a file...</string>
 
@@ -41,4 +42,6 @@
     <string name="no_plugins_available">No plugins available</string>
     <string name="plugin_not_in_registry">The plugin was not found in the registry!</string>
     <string name="cached_file_not_found">The cached file was not found</string>
+    <string name="title_marketplugin_list">MarketPlugins</string>
+    <string name="title_marketplugin_detail">MarketPlugin Detail</string>
 </resources>
