--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <!-- User warnings -->
     <string name="plugin_not_in_registry">The plugin was not found in the registry!</string>
     <string name="cached_file_not_found_processing_file">The cached file was not found. Processing file.</string>
+    <string name="could_not_open_plugin">The plugin could not be opened.</string>
 
     <!-- Service Permission -->
     <string name="service_permission_label">Aurora Services</string>
