--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,9 @@
     <string name="feedback_send">Send</string>
     <string name="feedback_edittext_hint">Enter your feedback here</string>
 
+    <!-- Plugin Market -->
+    <string name="download_plugin">Downloading the new plugin!</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="select_plugin">Select a plugin</string>
