--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,9 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="select_plugin">Select a plugin</string>
     <string name="no_plugins_available">No plugins available</string>
+    <string name="creator">Creator</string>
+    <string name="description">Description</string>
+    <string name="version">Version</string>
 
     <!-- User warnings -->
     <string name="plugin_not_in_registry">The plugin was not found in the registry!</string>
