Add UI indicating plugin download

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
 
     <!-- Plugin Market -->
     <string name="download_plugin">Downloading the new plugin!</string>
+    <string name="downloading">Downloading... See the progress in your notification bar!</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
