--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,5 +73,6 @@
     <string name="plugin_processing_failed">The plugin\'s processing failed.</string>
     <string name="plugin_failed_label">plugin failed</string>
     <string name="plugin_logo_description">Plugin logo</string>
+    <string name="feedback_title">Feedback</string>
 
 </resources>
