--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="home">Home</string>
     <string name="about_us">About Us</string>
     <string name="settings">Settings</string>
-    <string name="help_feedback">Help &amp; Feedback</string>
+    <string name="help_feedback">Feedback</string>
     <string name="plugin_market">Plugin Market</string>
     <string name="action_search">Search</string>
     <string name="search_prompt">Search for a file...</string>
