--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <!-- User warnings -->
     <string name="title_marketplugin_list">Plugin Market</string>
     <string name="title_marketplugin_detail">MarketPlugin Detail</string>
-    <string name="cached_file_not_found_processing_file">The cached file was not found. Processing file.</string>
+    <string name="cached_file_not_found">The cached file was not found.</string>
     <string name="could_not_open_plugin">The plugin could not be opened.</string>
     <string name="something_went_wrong">Something went wrong…</string>
 
